--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
       href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
       rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MDBReact5 Template App</title>
+    <title>E-learning</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
